[package]
name = "cmd_weather"
version = "0.1.0"
author = ["Clinton Bugtong <devclintbugtong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.22"
exitfailure = "0.5.1"
reqwest = { verson = "0.11.4", features=["json"]}
serde = "1.0.129"
serde_json = "1.0.66"
serde_derive = "1.0.129"
tokio = { version = "1.10.1", features = ["full"] }